testsuite/poke.pkl/trim-diag-3.pk
/* { dg-do compile } */

var a = [1,2][
        "foo" /* { dg-error "invalid index.*\n.*expected integral" } */
         :];
